--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -887,16 +887,23 @@ body {
   position: relative;
   border-top-left-radius: 5rem;
   border-top-right-radius: 5rem; }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      border-top-left-radius: 0rem;
+      border-top-right-radius: 0rem; } }
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     .header {
       -webkit-clip-path: polygon(20% 0, 100% 0, 100% 50%, 80% 100%, 0 100%, 0 50%);
       clip-path: polygon(0 0, 100% 0, 100% 50%, 90% 100%, 0 100%, 0 50%);
-      height: 95vh; } }
+      height: 95vh; }
+      @media only screen and (max-width: 37.5em) {
+        .header {
+          -webkit-clip-path: polygon(20% 0, 100% 0, 100% 50%, 80% 100%, 0 100%, 0 50%);
+          clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
+          height: 105vh; } } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
-      background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url(../img/forest-drone.jpg);
-      border-top-left-radius: 0rem;
-      border-top-right-radius: 0rem; } }
+      background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)), url(../img/forest-drone.jpg); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
