--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,13 +9,22 @@
     position: relative;
     border-top-left-radius: 5rem;
     border-top-right-radius: 5rem;
-    
 
+    @include responsive(phone) {
+        border-top-left-radius: 0rem;
+        border-top-right-radius: 0rem;
+    }
 
     @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
         -webkit-clip-path: polygon(20% 0, 100% 0, 100% 50%, 80% 100%, 0 100%, 0 50%);
         clip-path: polygon(0 0, 100% 0, 100% 50%, 90% 100%, 0 100%, 0 50%);
         height: 95vh;
+
+        @include responsive(phone) {
+            -webkit-clip-path: polygon(20% 0, 100% 0, 100% 50%, 80% 100%, 0 100%, 0 50%);
+            clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
+            height: 105vh
+        }
     }
 
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), //600px
@@ -26,8 +35,6 @@
                 rgba($color-white, 0.2),
                 rgba($color-white, 0)), 
             url(../img/forest-drone.jpg);
-        border-top-left-radius: 0rem;
-        border-top-right-radius: 0rem;
     }
     
     &__logo-box {
